add riot components

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-imagemin": "^1.0.1",
@@ -13,7 +14,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-riot": "^0.1.6",
     "grunt-wp-i18n": "^0.5.4",
-    "load-grunt-configs": "^1.0.0",
+    "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.2",
     "time-grunt": "^1.4.0"
   }
