--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-wp-i18n": "^0.5.4",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.2",
+    "shelljs": "^0.7.5",
     "time-grunt": "^1.4.0"
   }
 }
