--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,13 @@
     "type": "wordpress-theme",
     "license": "GPL-2.0",
     "require": {
-        "tgmpa/tgm-plugin-activation": "^2.6"
+        "tgmpa/tgm-plugin-activation": "^2.6",
+        "aristath/kirki": "^3.0"
+    },
+    "extra": {
+        "installer-paths": {
+            "vendor/{$name}/": ["type:wordpress-plugin"]
+        }
     },
     "autoload": {
         "psr-4": {
