--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"extract-text-webpack-plugin": "^3.0.0",
 		"import-glob-loader": "^1.1.0",
 		"node-sass": "^4.5.3",
+		"react-element-to-jsx-string": "^12.0.0",
 		"react-highlight": "^0.10.0",
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.18.2",
