--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-	"name": "gb-theme",
-	"version": "1.0.0",
-	"description": "Theme Boilerplate",
-	"main": "index.js",
-	"repository": "https://github.com/Apiki/gb-theme.git",
-	"author": "Apiki",
-	"license": "GPL-2.0",
-	"scripts": {
-		"storybook": "start-storybook -p 9001 -c storybook"
-	},
-	"devDependencies": {
-		"@storybook/react": "^3.2.8",
-		"css-loader": "^0.28.7",
-		"extract-text-webpack-plugin": "^3.0.0",
-		"import-glob-loader": "^1.1.0",
-		"node-sass": "^4.5.3",
-		"react-element-to-jsx-string": "^12.0.0",
-		"react-highlight": "^0.10.0",
-		"sass-loader": "^6.0.6",
-		"style-loader": "^0.18.2",
-		"svg-sprite-loader": "^3.2.5",
-		"svgo-loader": "^1.2.1",
-		"webpack": "^3.6.0"
-	},
-	"dependencies": {
-		"react": "^15.6.1",
-		"react-dom": "^15.6.1"
-	}
+  "name": "gb-theme",
+  "version": "1.0.0",
+  "description": "Theme Boilerplate",
+  "main": "index.js",
+  "repository": "https://github.com/Apiki/gb-theme.git",
+  "author": "Apiki",
+  "license": "GPL-2.0",
+  "scripts": {
+    "start": "start-storybook -p 9001 -c storybook",
+    "dev": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors"
+  },
+  "devDependencies": {
+    "@storybook/react": "^3.2.8",
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "clipboard": "^1.7.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "ignore-loader": "^0.1.2",
+    "import-glob-loader": "^1.1.0",
+    "node-sass": "^4.5.3",
+    "react-element-to-jsx-string": "^12.0.0",
+    "react-highlight": "^0.10.0",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "sass-to-js": "^1.3.1",
+    "style-loader": "^0.18.2",
+    "svg-sprite-loader": "^3.2.5",
+    "svgo-loader": "^1.2.1",
+    "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  }
 }
