--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "author": "Apiki",
   "license": "GPL-2.0",
   "scripts": {
-    "start": "start-storybook -p 9001 -c storybook",
-    "dev": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors"
+    "dev:storybook": "start-storybook -s ./ -p 9001 -c storybook",
+	"build:storybook": "build-storybook -c storybook -o ./ghost",
+	"dev:theme": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors"
   },
   "devDependencies": {
     "@storybook/react": "^3.2.8",
