--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "author": "Apiki",
   "license": "GPL-2.0",
   "scripts": {
-    "build:storybook ": "build-storybook -c storybook -o ./ghost",
+    "build:storybook": "build-storybook -c storybook -o ./ghost",
     "dev:storybook": "start-storybook -s ./ -p 9001 -c storybook",
     "dev:theme": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors",
     "phpcs": "phpcs --colors -p ./",
-    "phpcs:diff": "git diff --name-only --cached --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | xargs phpcs --colors -p",
+    "phpcs:diff": "git diff --name-only --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | dos2unix | xargs phpcs --colors -p",
     "precommit": "yarn phpcs:diff",
     "prepush": "yarn phpcs"
   },
