--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:storybook": "start-storybook -s ./ -p 9001 -c storybook",
     "dev:theme": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors",
     "phpcs": "phpcs --colors -p ./",
-    "phpcs:diff": "git diff --name-only --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | dos2unix | xargs phpcs --colors -p",
+    "phpcs:diff": "git diff --name-only --cached --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | xargs phpcs --colors -p",
     "precommit": "yarn phpcs:diff",
     "prepush": "yarn phpcs"
   },
