--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "prepush": "yarn phpcs"
   },
   "devDependencies": {
+    "@storybook/addon-options": "^3.2.10",
     "@storybook/react": "^3.2.8",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
-    "clipboard": "^1.7.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "husky": "^0.14.3",
-    "ignore-loader": "^0.1.2",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.5.3",
     "react-element-to-jsx-string": "^12.0.0",
@@ -32,8 +37,6 @@
     "sass-loader": "^6.0.6",
     "sass-to-js": "^1.3.1",
     "style-loader": "^0.18.2",
-    "svg-sprite-loader": "^3.2.5",
-    "svgo-loader": "^1.2.1",
     "webpack": "^3.6.0"
   },
   "dependencies": {
