--- a/package.json
+++ b/package.json
@@ -6,17 +6,15 @@
   "author": "Apiki",
   "license": "GPL-2.0",
   "scripts": {
-    "build:storybook": "build-storybook -c storybook -o ./ghost",
-    "dev:storybook": "start-storybook -s ./ -p 9001 -c storybook",
-    "dev:theme": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors",
+    "storybook": "start-storybook -p 9001 -c storybook",
     "phpcs": "phpcs --colors -p ./",
     "phpcs:diff": "git diff --name-only --cached --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | xargs phpcs --colors -p",
     "precommit": "yarn phpcs:diff",
     "prepush": "yarn phpcs"
   },
   "devDependencies": {
-    "@storybook/addon-options": "^3.2.10",
-    "@storybook/react": "^3.2.8",
+    "@storybook/addon-options": "^3.2.12",
+    "@storybook/react": "^3.2.12",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -26,21 +24,18 @@
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.4",
     "husky": "^0.14.3",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.5.3",
     "react-element-to-jsx-string": "^12.0.0",
     "react-highlight": "^0.10.0",
-    "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "sass-to-js": "^1.3.1",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.6.0"
+    "style-loader": "^0.19.0"
   },
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
