--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Apiki",
   "license": "GPL-2.0",
   "scripts": {
-    "storybook": "start-storybook -p 9001 -c storybook -s ./assets/images",
+    "storybook:dev": "start-storybook -p 9001 -c storybook -s ./,./assets/images",
+    "storybook:build": "build-storybook -c storybook -o ./static-app",
+    "dev": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors",
+    "build": "echo 'missing script to build theme with minified files'",
     "phpcs": "phpcs --colors -p ./",
     "phpcs:diff": "git diff --name-only --cached --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | xargs phpcs --colors -p",
     "precommit": "yarn phpcs:diff",
@@ -19,8 +22,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
     "css-loader": "^0.28.7",
@@ -29,13 +33,15 @@
     "husky": "^0.14.3",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.5.3",
-    "react-element-to-jsx-string": "^12.0.0",
-    "react-highlight": "^0.10.0",
+    "react-element-to-jsx-string": "^13.0.0",
+    "react-highlight": "briancappello/react-highlight#react-v16-compiled",
     "sass-loader": "^6.0.6",
+    "sass-to-js": "^1.3.1",
     "style-loader": "^0.19.0"
   },
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "strclass": "^2.0.9"
   }
 }
