--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors",
     "build": "echo 'missing script to build theme with minified files'",
     "phpcs": "phpcs --colors -p ./",
-    "phpcs:diff": "git diff --name-only --cached --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | xargs phpcs --colors -p",
+    "phpcs:diff": "git diff --name-only --cached --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | xargs phpcs --colors -p -n",
     "precommit": "yarn phpcs:diff",
     "prepush": "yarn phpcs"
   },
