--- a/.editorconfig
+++ b/.editorconfig
@@ -2,13 +2,16 @@
 root = true
 
 [*]
+indent_style = space
+indent_size = 2
 charset = utf-8
 end_of_line = lf
-indent_style = tab
-indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{package.json,composer.json}]
-indent_style = space
-indent_size = 2
+[*.{php,scss}]
+indent_style = tab
+indent_size = 4
+
+[composer.json]
+indent_size = 4
