--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,20 @@
-# editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+indent_style = space
+indent_size = 2
 trim_trailing_whitespace = true
 
-[*.{php,scss}]
+[*.md]
+trim_trailing_whitespace = false
+
+[*.php]
 indent_style = tab
 indent_size = 4
 
 [composer.json]
+indent_style = tab
 indent_size = 4
