--- a/package.json
+++ b/package.json
@@ -6,42 +6,63 @@
   "author": "Apiki",
   "license": "GPL-2.0",
   "scripts": {
-    "storybook:dev": "start-storybook -p 9001 -c storybook -s ./,./assets/images",
-    "storybook:build": "build-storybook -c storybook -o ./static-app",
-    "dev": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors",
-    "build": "echo 'missing script to build theme with minified files'",
+    "start": "yarn run storybook",
+    "dev": "yarn run server",
+    "server": "webpack --config ./webpack/dev.config.js --watch --debug --progress --colors",
+    "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --progress --config webpack/prod.config -p",
+    "storybook": "start-storybook -p 9002 -c storybook",
+    "build:storybook": "cross-env NODE_ENV=production BABEL_ENV=production build-storybook -c storybook -o docs",
+    "test:storybook": "storyshots -c storybook",
+    "test-storybook:fix": "yarn test:storybook -- -u",
     "phpcs": "phpcs --colors -p ./",
     "phpcs:diff": "git diff --name-only --cached --diff-filter=ACMRTUXB -- . ':(exclude)vendor/*' | xargs phpcs --colors -p -n",
     "precommit": "yarn phpcs:diff",
     "prepush": "yarn phpcs"
   },
   "devDependencies": {
-    "@storybook/addon-options": "^3.2.12",
-    "@storybook/react": "^3.2.12",
-    "babel-cli": "^6.26.0",
+    "@storybook/addon-options": "^3.3.12",
+    "@storybook/react": "^3.3.12",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "browser-sync": "^2.18.13",
-    "browser-sync-webpack-plugin": "^1.2.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.4",
+    "babel-runtime": "^6.26.0",
+    "browser-sync": "^2.23.6",
+    "browser-sync-webpack-plugin": "^2.0.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.17.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "husky": "^0.14.3",
     "import-glob-loader": "^1.1.0",
-    "node-sass": "^4.5.3",
-    "react-element-to-jsx-string": "^13.0.0",
-    "react-highlight": "briancappello/react-highlight#react-v16-compiled",
+    "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "sass-to-js": "^1.3.1",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.20.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.10.0",
+    "webpack-dashboard": "^1.1.1",
+    "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "strclass": "^2.0.9"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
