--- a/package.json
+++ b/package.json
@@ -25,10 +25,17 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
@@ -52,6 +59,8 @@
     "husky": "^0.14.3",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.7.2",
+    "prismjs": "^1.11.0",
+    "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
     "sass-to-js": "^1.3.1",
     "style-loader": "^0.20.1",
